<resources>
    <string name="app_name">Greek restaurant</string>
    <string name="order">Order :</string>
    <string name="menu">Menu</string>
    <string name="book_a_table">Book a table</string>
    <string name="my_order">my order</string>
    <string name="close_menu">Close Menu</string>
    <string name="greekos">Greekos</string>
    <string name="greek_salad_10">Greek Salad | 10$.</string>
    <string name="salmon_on_mashed_potato_20">Salmon on mashed potato | 20$.</string>
    <string name="griled_fish_and_lime_20">Griled fish and lime | 20$.</string>
    <string name="orenge_juice_3">Orenge Juice | 3$.</string>
    <string name="cola_3">cola | 3$.</string>
    <string name="fruits_smoodis_5">Fruits smoodis | 5$.</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="number_of_seats">Number of Seats</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="vegan_option_needed">Vegan option needed</string>
    <string name="smoking_zone">Smoking zone</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="bit_transfer">BIT Transfer</string>
    <string name="cash">Cash</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="order_details">Order Details</string>
    <string name="close">Close</string>
    <string name="no_orders_yet">No_orders_yet</string>
    <string name="seats">Seats</string>
    <string name="vegan">Vegan</string>
    <string name="vegan_yes">Yes</string>
    <string name="vegan_no">No</string>
    <string name="payment">Payment</string>
    <string name="smoke_yes">Yes</string>
    <string name="smoke_no">No</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_select_time">Please select time</string>
    <string name="please_select_date">Please select date</string>
    <string name="order_saved">Order saved !</string>
    <string name="please_choose_payment_method">Please choose payment method</string>
    <string name="Description_text">Welcome to Greekos – a charming Greek restaurant perched on a breathtaking hillside, offering stunning views of the blue sea.\n\nCome and enjoy authentic flavors, fresh dishes, and enchanting aromas in a true Greek atmosphere that will leave you with a smile.\n\nYour Greek experience begins here – at Greekos!</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="long_press_on_the_order_for_canceling">Long press on the order for canceling</string>
    <string name="order_deleted">Order deleted</string>
    <string name="kabab_fries_and_dip_15">Kabab, Fries and dip | 15$</string>
    <string name="kabab_fries_15">kabab and fries | 15$</string>
    <string name="traditional_greek_ouzo_shot_5">Traditional Greek Ouzo Shot | $5</string>
    <string name="dolmadakia_stuffed_grape_leaves_8">Dolmadakia (Stuffed Grape Leaves) | $8</string>
</resources>