<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/header_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:text="@string/order"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="Close"
            android:src="@drawable/baseline_close_24"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_seats"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"/>

    <Spinner
        android:id="@+id/seats_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/seats_options"
        android:layout_marginBottom="16dp" />

    <!-- Date Picker -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:focusable="false"
        android:layout_marginBottom="16dp" />

    <!-- Time Picker -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_time"
        android:focusable="false"
        android:layout_marginBottom="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/vegan_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegan_option_needed"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/smoking_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoking_zone"
            app:layout_constraintStart_toEndOf="@id/vegan_option"
            app:layout_constraintTop_toTopOf="@id/vegan_option"
            android:layout_marginStart="16dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Payment Methods -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <RadioGroup
        android:id="@+id/payment_method_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/payment_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card" />

        <RadioButton
            android:id="@+id/payment_bit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bit_transfer" />

        <RadioButton
            android:id="@+id/payment_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

    </RadioGroup>

    <!-- Confirm Button -->
    <Button
        android:id="@+id/confirm_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_booking"
        android:layout_marginTop="16dp" />

</LinearLayout>