<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">


    <ImageView
        android:id="@+id/greekos_img"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/greekos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/greekos"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greekos_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        android:layout_marginTop="20dp"
        android:id="@+id/bar_buttons">



        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/menu"
            android:id="@+id/menu"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/book_a_table"
            android:id="@+id/book_table"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/my_order"
            android:id="@+id/orders"/>


    </LinearLayout>

      <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Description_text"
            android:textSize="16sp"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_buttons"
            app:layout_constraintBottom_toTopOf="@+id/menu_layout"/>


    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="#F0F0F0"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/close_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_menu" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                    android:id="@+id/salad_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/salad"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/salad_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/greek_salad_10"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/salad_img"
                        app:layout_constraintTop_toTopOf="@id/salad_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/salad_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/kabab_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/kabab"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/kabab_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/kabab_fries_15"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/kabab_img"
                        app:layout_constraintTop_toTopOf="@id/kabab_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/kabab_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/gefen_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/gefen"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/gefen_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dolmadakia_stuffed_grape_leaves_8"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/gefen_img"
                        app:layout_constraintTop_toTopOf="@id/gefen_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/gefen_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/salmon_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/salmon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/salmon_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/salmon_on_mashed_potato_20"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/salmon_img"
                        app:layout_constraintTop_toTopOf="@id/salmon_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/salmon_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/fish_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/fish"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/fish_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/griled_fish_and_lime_20"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/fish_img"
                        app:layout_constraintTop_toTopOf="@id/fish_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/fish_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/orenge_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/orenge"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/orenge_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/orenge_juice_3"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/orenge_img"
                        app:layout_constraintTop_toTopOf="@id/orenge_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/orenge_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/cola_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/cola"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/cola_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cola_3"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/cola_img"
                        app:layout_constraintTop_toTopOf="@id/cola_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/cola_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/smoodi_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/smoodi"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/smoodi_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fruits_smoodis_5"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/smoodi_img"
                        app:layout_constraintTop_toTopOf="@id/smoodi_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/smoodi_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/ozo_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ozo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/ozo_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/traditional_greek_ouzo_shot_5"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/ozo_img"
                        app:layout_constraintTop_toTopOf="@id/ozo_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/ozo_img"
                        android:layout_marginStart="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>